RadTest Dev/src/objects/Sample_Product__c.object
<CustomObject>
    <fields>
        <fullName>Pharma_Product__c</fullName>
        <label>Pharma Product</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Pharma_Products__c.Product_Type__c</field>
                <operation>equals</operation>
                <value>Capsules</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Pharma_Products__c</referenceTo>
        <relationshipLabel>Sample Products</relationshipLabel>
        <relationshipName>Sample_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sample_Product_Code__c</fullName>
        <label>Sample Product Code</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Visit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Visit</label>
        <referenceTo>Visit__c</referenceTo>
        <relationshipLabel>Sample Products</relationshipLabel>
        <relationshipName>Sample_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Sample Product</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Sample Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sample Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>